# freedom-property-hubspot

./: .gitignore  main.py  pyproject.toml
controller/: pipeline.py
libs/: bigquery.py  hubspot.py
test/: test_units.py
